"Simple options" clipping fix

--- a/mbf-site/src/css/Collapsible.css
+++ b/mbf-site/src/css/Collapsible.css
@@ -38,5 +38,5 @@
 }
 
 .open {
-    max-height: 350px;
+    max-height: 370px;
 }
